[package]
edition = "2018"
name = "stm32f3"
version = "0.14.0"
authors = ["Adam Greig <adam@adamgreig.com>", "stm32-rs Contributors"]
description = "Device support crates for STM32F3 devices"
repository = "https://github.com/stm32-rs/stm32-rs"
readme = "README.md"
keywords = ["stm32", "svd2rust", "no_std", "embedded"]
categories = ["embedded", "no-std"]
license = "MIT/Apache-2.0"

[dependencies]
bare-metal = "1.0.0"
vcell = "0.1.3"
cortex-m = "0.7.2"

[dependencies.cortex-m-rt]
optional = true
version = ">=0.6.15,<0.8"

[package.metadata.docs.rs]
features = ['rt', 'stm32f302', 'stm32f303', 'stm32f373']
default-target = "thumbv7em-none-eabihf"
targets = []

[features]
default = ["rt"]
rt = ["cortex-m-rt/device"]
stm32f301 = []
stm32f302 = []
stm32f303 = []
stm32f373 = []
stm32f3x4 = []
