[package]
edition = "2021"
name = "stm32f7"
version = "0.16.0"
authors = ["Adam Greig <adam@adamgreig.com>", "stm32-rs Contributors"]
description = "Device support crates for STM32F7 devices"
repository = "https://github.com/stm32-rs/stm32-rs"
readme = "README.md"
keywords = ["stm32", "svd2rust", "no_std", "embedded"]
categories = ["embedded", "no-std"]
license = "MIT/Apache-2.0"
rust-version = "1.65"

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.5", optional = true }
defmt = { version = "1", optional = true }
vcell = "0.1.3"
portable-atomic = { version = "1", default-features = false, optional = true }

[package.metadata.docs.rs]
features = ['atomics', 'critical-section', 'defmt', 'rt', 'stm32f733', 'stm32f779']
default-target = "thumbv7em-none-eabihf"
targets = []

[features]
default = ["critical-section", "rt"]
rt = ["cortex-m-rt/device"]
atomics = ["dep:portable-atomic"]
stm32f722 = []
stm32f723 = []
stm32f730 = []
stm32f732 = []
stm32f733 = []
stm32f745 = []
stm32f746 = []
stm32f750 = []
stm32f756 = []
stm32f765 = []
stm32f767 = []
stm32f769 = []
stm32f777 = []
stm32f778 = []
stm32f779 = []
