[package]
edition = "2021"
name = "stm32g4"
version = "0.15.1"
authors = ["Adam Greig <adam@adamgreig.com>", "stm32-rs Contributors"]
description = "Device support crates for STM32G4 devices"
repository = "https://github.com/stm32-rs/stm32-rs"
readme = "README.md"
keywords = ["stm32", "svd2rust", "no_std", "embedded"]
categories = ["embedded", "no-std"]
license = "MIT/Apache-2.0"
rust-version = "1.65"

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.3", optional = true }
defmt = { version = "0.3.5", optional = true }
vcell = "0.1.3"
portable-atomic = { version = "1", default-features = false, optional = true }

[package.metadata.docs.rs]
features = ['critical-section', 'rt', 'stm32g431', 'stm32g441', 'stm32g474', 'stm32g484']
default-target = "thumbv7em-none-eabihf"
targets = []

[features]
default = ["critical-section", "rt"]
rt = ["cortex-m-rt/device"]
atomics = ["dep:portable-atomic"]
stm32g431 = []
stm32g441 = []
stm32g471 = []
stm32g473 = []
stm32g474 = []
stm32g483 = []
stm32g484 = []
stm32g491 = []
stm32g4a1 = []
