[package]
edition = "2018"
name = "stm32h7"
version = "0.14.0"
authors = ["Adam Greig <adam@adamgreig.com>", "stm32-rs Contributors"]
description = "Device support crates for STM32H7 devices"
repository = "https://github.com/stm32-rs/stm32-rs"
readme = "README.md"
keywords = ["stm32", "svd2rust", "no_std", "embedded"]
categories = ["embedded", "no-std"]
license = "MIT/Apache-2.0"

[dependencies]
bare-metal = "1.0.0"
vcell = "0.1.3"
cortex-m = "0.7.2"

[dependencies.cortex-m-rt]
optional = true
version = ">=0.6.15,<0.8"

[package.metadata.docs.rs]
features = ['rt', 'stm32h743', 'stm32h743v', 'stm32h747cm7']
default-target = "thumbv7em-none-eabihf"
targets = []

[features]
default = ["rt"]
rt = ["cortex-m-rt/device"]
stm32h735 = []
stm32h743 = []
stm32h743v = []
stm32h747cm4 = []
stm32h747cm7 = []
stm32h753 = []
stm32h753v = []
stm32h7b3 = []
