[package]
edition = "2021"
name = "stm32h7"
version = "0.16.0"
authors = ["Adam Greig <adam@adamgreig.com>", "stm32-rs Contributors"]
description = "Device support crates for STM32H7 devices"
repository = "https://github.com/stm32-rs/stm32-rs"
readme = "README.md"
keywords = ["stm32", "svd2rust", "no_std", "embedded"]
categories = ["embedded", "no-std"]
license = "MIT/Apache-2.0"
rust-version = "1.65"

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.5", optional = true }
defmt = { version = "1", optional = true }
vcell = "0.1.3"
portable-atomic = { version = "1", default-features = false, optional = true }

[package.metadata.docs.rs]
features = ['atomics', 'critical-section', 'defmt', 'rt', 'stm32h735', 'stm32h750', 'stm32h753', 'stm32h753v', 'stm32h757cm7', 'stm32h7b3']
default-target = "thumbv7em-none-eabihf"
targets = []

[features]
default = ["critical-section", "rt"]
rt = ["cortex-m-rt/device"]
atomics = ["dep:portable-atomic"]
stm32h723 = []
stm32h725 = []
stm32h730 = []
stm32h733 = []
stm32h735 = []
stm32h742 = []
stm32h743 = []
stm32h743v = []
stm32h745cm4 = []
stm32h745cm7 = []
stm32h747cm4 = []
stm32h747cm7 = []
stm32h750 = []
stm32h753 = []
stm32h753v = []
stm32h755cm4 = []
stm32h755cm7 = []
stm32h757cm4 = []
stm32h757cm7 = []
stm32h7a3 = []
stm32h7b0 = []
stm32h7b3 = []
stm32h7r = []
stm32h7s = []
