[package]
edition = "2021"
name = "stm32wba"
version = "0.16.0"
authors = ["Adam Greig <adam@adamgreig.com>", "stm32-rs Contributors"]
description = "Device support crates for STM32WBA devices"
repository = "https://github.com/stm32-rs/stm32-rs"
readme = "README.md"
keywords = ["stm32", "svd2rust", "no_std", "embedded"]
categories = ["embedded", "no-std"]
license = "MIT/Apache-2.0"
rust-version = "1.65"

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.5", optional = true }
defmt = { version = "1", optional = true }
vcell = "0.1.3"
portable-atomic = { version = "1", default-features = false, optional = true }

[package.metadata.docs.rs]
features = ['atomics', 'critical-section', 'defmt', 'rt', 'stm32wba50', 'stm32wba52', 'stm32wba54', 'stm32wba55']
default-target = "thumbv8m.main-none-eabihf"
targets = []

[features]
default = ["critical-section", "rt"]
rt = ["cortex-m-rt/device"]
atomics = ["dep:portable-atomic"]
stm32wba50 = []
stm32wba52 = []
stm32wba54 = []
stm32wba55 = []
